--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 .page {
   min-width: 1100px;
   /* we don't know how to make mobile versions of websites yet, */
@@ -13,19 +14,280 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  position: relative;
+  display: flex;
+  align-items: center;
   /* parameters for the header section */
 }
+.logo {
+  width: 154px;
+  height: 31px;
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 3;
 
+}
+.logo_place_header {
+  width: auto;
+}
+.header__title {
+  width: 730px;
+  display: flex;
+  align-items: center;
+  margin-left: 64px;
+  position:absolute;
+  z-index: 2;
+  font-weight: bold;
+  line-height: 96px;
+  font-size: 102px;
+}
+
+.header__subtitle {
+  width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  position:absolute;
+  z-index: 2;
+  font-weight: normal;
+  line-height: 25px;
+  font-size: 18px;
+}
+
+.header__link{
+  color: #2f80ed;
+}
+.header__main-illustration {
+  width: 756px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.header__main_image{
+  width: 756px;
+  height: 608px;
+}
+.header__square {
+  background-color: #2f80ed;
+  width: 568px;
+  height: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+}
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
   width: 568px;
 }
 
+.description{
+  display: flex;
+  justify-content: center;
+  justify-items: auto;
+}
+.two-colums{
+  width: 80%;
+  padding: 100px 0;
+  display: flex;
+  justify-content: space-between;
+}
+.two-colums__brief{
+  
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+.two-colums__main-text{
+  width: 80%;
+  min-width: 784px;
+}
+.two-colums__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.section-title{
+  display: flex;
+  justify-content: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+.section-subtitle{
+  display: flex;
+  justify-content: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.digits{
+  position: relative;
+  justify-items:auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.table{
+  position: relative;
+  width: 1100px;
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-bottom: 90px;
+}
+
+.table__cell{
+  width: 250px;
+}
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+.feynman{
+  height: 790px;
+  position: relative;
+  background-color: #f2f2f2;
+  
+}
+.feynman__title{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 775px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  padding-top: 100px;
+  margin:auto;
+}
+.feynman__subtitle{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+.feynman__image{
+  position: absolute;
+  width: 867px;
+  height: 637px;
+  bottom:0;
+  left: 0;
+  z-index: 0;
+}
+.feynman__link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+.kaufman{
+  background-color: #1f1f1f;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.section__title{
+  z-index: 1;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  padding-top:90px ;
+  padding-bottom: 20px;
+}
+.section__subtitle{
+  z-index: 1;
+  display: contents;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  padding: 0;
+}
+.kaufman__triangle{
+  width: 660px;
+  height: 636px;
+  position: absolute;
+  right: -124px;
+  z-index: 0;
+
+}
+.footer{
+  min-height: 350px;
+  position: relative;
+  background-color: #1f1f1f;
+  color:white;
+}
+.logo__placer_footer{
+  width: auto;
+  width: 183px;
+  height: 35px;
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 3;
+}
+.footer__columns{
+  width: 90%;
+  position: relative;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+}
+.footer__author{
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.footer__column-heading{
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.footer__column-link{
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  color: white;
+}
+.footer__list{
+  list-style: none;
+}
+.footer__column_content_copyright{
+  flex-basis: 711px;
+}
 /* including elements with key-value modifiers */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+.table__text_theme_dark{
+  width: 60%;
+  color: white;
 }
