--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,6 @@
 
 .header__subtitle {
   width: 388px;
-  position: absolute;
   bottom: 30px;
   left: 64px;
   position:absolute;
@@ -199,10 +198,11 @@
   width: auto;
   height: 340px;
   margin-top: 50px;
-  display: flex;
+  display: flex;  
 }
 .video__iframe{
   padding-left: 20px;
+  border: none;
 }
 .oakley{
   background-color: #f2f2f2;
@@ -215,11 +215,6 @@
 .khan__book-pic{
   width: 620px;
   height: 608px;
-}
-.khan__quote{
-  width: 790px;
-  padding-top: 50px;
-  padding-bottom: 36px;
 }
 .khan{
   display: flex;
@@ -254,6 +249,9 @@
   font-weight: bold;
 }
 .khan__quote{
+  width: 790px;
+  padding-top: 50px;
+  padding-bottom: 36px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
